SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository, snapshots and future releases.
===============================================================================================

Enhancements:

Handling of copying SQL result rows to extra windows was unified and now offers
  the "mark duplicate rows" function.
  Ways to copy result rows to extra windows are:
  - SQL result search
  - right mouse menu "Copy selected rows to new window"
  - right mouse menu "Copy colored rows to new window"

Find in preferences/configurations:
  Former "Find in Global Preferences and New Session" now allows to search in
  the Alias properties and Saved Sessions dialogs, too.

Find in Global Preferences and New Session Properties (menu File --> Find in preferences):
  Leaf nodes of the search dialog tree can now be double clicked to jump to their result in the UI.
  Note: Non leaf nodes can be right clicked to jump to their result in the UI.

Dark theme: Background colors of popups for
  code completion (ctrl+space), tools (ctrl+t) and bookmarks (ctrl+j) are now adjusted
  when the dark theme ist used.

Look and Feel plugin: Upgrade FlatLaF to version 3.0

Upgraded to latest RSyntax version 6.0.1.

The "Find Alias" dialog (Ctrl+Alt+Shift+G or Ctrl+Alt+Shift+F) now offers to modify Aliases.

The "Save file as" dialog now offers a check box to move the file instead of copying it.
  If the file is under GIT control and is moved inside its GIT repository
  it will be committed after being moved to keep its GIT history intact.

Data types BLOB and CLOB loading configuration was restructured and fixed.
  Both data types now offer the following loading options:
   - Read contents when table is first loaded (offers to limit the amount of data to read)
   - Read contents when table cell becomes visible
   - Read contents when table cell is focused
   - Do not read contents