@@ -74,3 +74,7 @@ SQLResultExecuterPanel.canceleRequested=Query execution cancel requested by user
 
 alias.properties.no.keepAliveSql=In 'Alias properties' --> tab 'Connection' you enabled Keep-Alive without entering a SQL statement. Keep-Alive will not work.
 
+
+Session.reconn.skiped.on.user.request=User requested to skip opening a new connection.\n\
+  This Session is now in the same invalid state as when reconnect failed.\n\
+  Reconnect again to fix this state.
